--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,4 @@
 <h1>Home Page</h1>
 <a href="/about">Go to the about page</a>
+<p>Welcome to the Universe</p>
+<img src="https://cdn.spacetelescope.org/archives/images/screen/heic0406a.jpg">
